# Thinkly

./: CMakeLists.txt  README.md  main.cpp
core/: FileManager.cpp  FileManager.h  MainWindow.cpp  MainWindow.h  WebEngine.cpp  WebEngine.h
ui/: index.html
ui/css/: adaptability.css  style.css
ui/js/: files.js  logic.js
